--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.11.3",
     "jose": "^6.0.10",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
