--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toggle": "^1.1.8",
     "@radix-ui/react-toggle-group": "^1.1.9",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.96",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.11.3",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
@@ -29,6 +32,7 @@
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0"
