--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toggle": "^1.1.8",
     "@radix-ui/react-toggle-group": "^1.1.9",
-    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/react-spline": "^1.0.0",
     "@splinetool/runtime": "^1.9.96",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -31,9 +31,9 @@
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-datepicker": "^8.4.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0"
   },
@@ -44,6 +44,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/webpack": "^5.28.5",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "prisma": "^6.6.0",
