--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toggle": "^1.1.8",
     "@radix-ui/react-toggle-group": "^1.1.9",
-    "@splinetool/react-spline": "^1.0.0",
-    "@splinetool/runtime": "^1.9.96",
+    "@rive-app/react-canvas": "^4.21.1",
+    "@tsparticles/preset-links": "^3.2.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,8 +34,10 @@
     "react": "^18.2.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
+    "react-tsparticles": "^2.12.2",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
